www/css/style.css
/* ... */
.reply-new input {
  background: 0 0
}

.user .item-content {
  padding-right: 16px
}

.PostMention {
  margin: 0 3px
}

.PostMention:first-child {
  margin-left: 0
}

.PostMention:before {
  display: inline-block;
  font-family: "Ionicons";
  font-size: inherit;
  text-rendering: auto;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  content: "\f4c7";
  margin-right: 5px
}

hr.topic {
  border: 0;
  height: 1px;
  background-image: -webkit-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0);
  background-image: -moz-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0);
  background-image: -ms-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0);
  background-image: -o-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0);
}

@media (min-width: 768px) {
  .intro {
    width: 79%;
    right: 0;
  }
  .modal {
    top: 10%;
    right: 10%;
    bottom: 10%;
    left: 10%;
    min-height: 240px;
    width: 80%;
  }

  marked {
    width: 90%;
    margin: 0 auto;
  }

  marked img.full-image,
  marked img {
    width: auto;
    max-width: 400px;
    margin: 0 auto;
  }

  .intro .full-image {
    width: auto;
    right: 0;
  }
}

.tabs-growth > .tabs,
.tabs.tabs-growth {
  border-color: #5e6772;
  background-color: #5e6772;
  background-image: linear-gradient(0deg, #5e6772, #5e6772 50%, transparent 50%);
  color: #fff;
}

.tabs-growth > .tabs .tab-item .badge,
.tabs.tabs-growth .tab-item .badge {
  background-color: #000;
  color: #5e6772;
}

.bar.bar-positive {
  border-color: #5e6772;
  background-color: #5e6772;
  background-image: linear-gradient(0deg, #5e6772, #5e6772 50%, transparent 50%);
  color: #fff;
}

.bar-positive .button.active, .bar-positive .button.activated {
  background-color: #5e6772;
}

.bar.bar-positive .title {
  color: #fff;
}

.bar.bar-positive.bar-footer {
  background-image: linear-gradient(180deg, #5e6772, #5e6772 50%, transparent 50%);
}

.spinner-android {
  stroke: #5e6772;
}
.bar-positive .button {
  background-color: #5e6772;
}

.item.solutionItem {
  margin: 0;
}

label.item.has-error {
  border-bottom: 2px solid red;
}

label.item.has-error-lr {
  border-left: 2px solid red;
  border-right: 2px solid red;
}

label.item.valid-lr {
  border-left: 2px solid green;
  border-right: 2px solid green;
}

.form-errors {
  margin: 5px 0
}

.form-error {
  padding: 2px 0 2px 16px;
  color: red;
}

#profile-content {
  position: relative;
  margin-top: 150px;
  background-color: white;
  box-shadow: 0px -1px 10px rgba(0,0,0,0.4);
  padding-top: 200px;
}

#profile-info {
  position: absolute;
  top: -95px;
  width: 100%;
  z-index: 2;
  text-align: center;
}
#profile-name {
  color: #444;
  font-size: 26px;
}
#profile-description {
  font-size: 15px;
  color: #888;
  font-weight: bold;
}
#profile-description a {
  color: #888;
}

#profile-image {
  display: block;
  border-radius: 100px;
  border: 1px solid #fff;
  width: 128px;
  height: 128px;
  margin: 30px auto 0;
  box-shadow: 0px 0px 4px rgba(0,0,0,0.7);
}

#profile-avatar {
  display: block;
  border-radius: 100px;
  border: 1px solid #fff;
  width: 128px;
  height: 128px;
  font-size: 128px;
  line-height: 128px;
  margin: 30px auto 0;
  background: #7088a9;
  color: #fff;
  box-shadow: 0px 0 4px rgba(0,0,0,0.7);
}

.profile-avatar-small {
  position: absolute;
  top: 16px;
  left: 16px;
  display: inline-block;
  float: left;
  border-radius: 50%;
  border: 1px solid #fff;
  width: 40px;
  height: 40px;
  font-size: 40px;
  line-height: 40px;
  /*margin: 30px auto 0;*/
  background: #7088a9;
  color: #fff;
  box-shadow: 0px 0 4px rgba(0,0,0,0.7);
}

.topic-page.profile-avatar-small {
  position: relative;
  top: 0;
  left: 0;
  width: 32px;
  height: 32px;
  font-size: 32px;
  line-height: 32px;
}

.topic-detail {
}

.button-clear.button-clear.isLike {
  color: #3982DA;
}

.roadmap-card.item {
  padding: 0;
}

.bar-stable .button.red-button {
  background-color: #FF6161;
}

